# Zupeload

./: .gitattributes  README.md  justfile
server/: .gitignore  Cargo.toml  file-structure.md
server/src/: lib.rs  logger.rs
server/src/core/: config.rs  logger.rs  utils.rs
server/src/domain/: models.rs
server/src/infrastructure/: database.rs  detector.rs  embeddings.rs  mod.rs
server/src/services/: processor.rs
server/tests/: database_tests.rs  processor_tests.rs
